deploy/kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nemesys
  labels:
    app: nemesys
    team: infra
