deploy/kubernetes/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: nemesys
  labels:
    app: nemesys
    team: infra
spec:
  selector:
    app: nemesys
  ports:
    - name: svc-http
      protocol: TCP
      port: 80
      targetPort: web-http
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: nemesys
  labels:
    app: nemesys
    team: infra
spec:
  selector:
    app: nemesys
  ports:
    - name: svc-http
      protocol: TCP
      port: 8080
      targetPort: api-http
