deploy/kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemesys
  namespace: nemesys
  labels:
    app: nemesys
    team: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - nemesys.example.com
      secretName: nemesys-tls
  rules:
    - host: nemesys.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: svc-http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: svc-http
